[package]
name = "srs-sm2"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Pure, no_std-compatible implementation of the SuperMemo SM-2 spaced-repetition scheduling algorithm."
license = "MIT OR Apache-2.0"
keywords = ["srs", "sm2", "spaced-repetition", "flashcards", "supermemo"]
categories = ["algorithms", "science", "no-std"]
repository = "https://github.com/vate-ps/srs-sm2"
documentation = "https://docs.rs/srs-sm2"
readme = "README.md"
authors = ["Suradet Pratomsak <pharmacistsabot@gmail.com>"]
exclude = ["/.github", "/target"]

[dependencies]
libm = { version = "0.2", default-features = false }

[features]
default = []


[lib]
doctest = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "warn"
